# jr_optlib

./: .gitignore  AGENTS.md  CATALOG.md  README.md  _ai_log.md  _handover.html  _handover.json  pyproject.toml
.claude/: CLAUDE.md  settings.json
_state/: current.md
oracle_bank/: README.md  _retrieved_sources.md  demo_scp41.py
oracle_bank/setcover/: known_optima.yaml  loader.py
registry/: INDEX.md  SCHEMA.md  functions.yaml  instances.yaml  references.yaml
src/jr_optlib/: __init__.py  harness.py
src/jr_optlib/optimization/: __init__.py  choice.py  dp.py  entropic_qp.py  lagrangian.py  nlp.py  routing.py
src/jr_optlib/oracles/: __init__.py  choice.py  core.py  dp.py  entropic_qp.py  nlp.py  population.py  rl.py  sampling.py  setcover.py  sskp.py  transport.py  vsp.py
src/jr_optlib/population/: __init__.py  curvature.py  hard_ipf.py  integerize.py
src/jr_optlib/sampling/: __init__.py  mcmc.py  rl.py  setcover_mcmc.py  sskp_mh.py
src/jr_optlib/setcover/: __init__.py  entropy.py
src/jr_optlib/transport/: __init__.py  _backend.py  ipf.py  lp_transport.py  population_round.py  rounding.py  sinkhorn.py
src/jr_optlib/vsp/: __init__.py  qbuzz_vsp.py  (+1 more)
tests/: conftest.py  test_ipf.py  test_lp_transport.py  test_optimization_choice.py  test_optimization_dp.py  test_optimization_entropic_qp.py  test_optimization_lagrangian.py  test_population_curvature.py  test_population_hard_ipf.py  test_population_round.py  test_rounding.py  test_sampling_mcmc.py  test_sampling_rl.py  test_setcover_entropy.py  test_sinkhorn.py  test_sskp_mh.py  test_vsp_heuristic.py
